add proxy module add RPC demo in rpc module